opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/typerep_extended"
bug-reports: "https://github.com/janestreet/typerep_extended/issues"
dev-repo: "https://github.com/janestreet/typerep_extended.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "typerep_extended" "--root" "." "-j" jobs "@install"]
]
depends: [
  "bin_prot"
  "core_kernel"
  "jbuilder"
  "ppx_bin_prot"
  "ppx_driver"
  "ppx_jane"
  "ppx_sexp_conv"
  "ppx_sexp_value"
  "ppx_type_conv"
  "ppx_typerep_conv"
  "sexplib"
  "typerep"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Runtime types for OCaml

typerep_extended is a set of additional modules for typerep. They are
not part of the base typerep library to avoid a circular dependency
between core_kernel and typerep.
"
